test/files/neg/ypredef-custom.check
C_2.scala:5: error: not found: value println
  println("this should fail")
  ^
one error found
